# Scratch3-splash

./: .autotools  .cproject  .gitignore  .project  NEWS  README  README.md  cleanup.sh  configure.ac
src/: MainWindow.cpp  MainWindow.h  Makefile.am  TcpClient.cpp  TcpClient.h  main.cpp  scratch-hack.xcf
src/tmp/: borderless  borderless.cc
